--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "gdtbackend",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
@@ -11,6 +12,8 @@
   "dependencies": {
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
+    "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "react": "18.0.0",
     "react-native": "0.69.6"
   },
